# Mark_1

./: LICENSE  README.md
Actual_FrontEnd/LandingPage01/: extract_frames.py
Actual_FrontEnd/LandingPage01/src/: index.css
Actual_FrontEnd/LandingPage02/: extract_frames_02.py
Actual_FrontEnd/LoginPage01/: index.html  package-lock.json
Actual_FrontEnd/LoginPage01/src/: App.jsx  LoginUI.css  LoginUI.jsx  firebase.js
Actual_FrontEnd/MainPage/: index.html  package-lock.json  package.json
Actual_FrontEnd/MainPage/src/: App.css  App.jsx  SplitText.jsx  index.css
Backend (MVP)/: .env  llm.py  main.py  schemas.py
Backend (MVP)/Agents/: router.py
Backend (MVP)/Capabilites/: chat.py  crm.py  email.py  report_gen.py
Backend (MVP)/Persona/: store.py
Frontend/: index.html  package.json
Frontend/Page 01/: package-lock.json
Frontend/Page_03/: index.html  package-lock.json  package.json
Frontend/Page_04/: package-lock.json  package.json
Frontend/Page_05/: index.html  package-lock.json  package.json
Frontend/src/: Orb.jsx
persona-ai/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
persona-ai/.github/workflows/: ci.yml
persona-ai/alembic/: env.py
persona-ai/alembic/versions/: 20260329_0001_initial.py
persona-ai/app/: dependencies.py  main.py
persona-ai/app/core/: config.py  logging.py  security.py
persona-ai/app/db/: init_db.py  session.py
persona-ai/app/models/: memory.py  persona.py  session.py  user.py
persona-ai/app/routers/: memory.py  persona.py  user.py
persona-ai/app/schemas/: memory.py  persona.py  user.py
persona-ai/app/services/: embedding_service.py  memory_service.py  persona_service.py  retrieval_service.py  user_service.py
persona-ai/app/utils/: chunking.py  vector_search.py
persona-ai/scripts/: seed_data.py
persona-ai/tests/: test_persona.py  test_user.py
twin-agent_claude_code/: .env.example  .gitignore  README.md  pyproject.toml
twin-agent_claude_code/agent/: core.py  executor.py  persona.py
twin-agent_claude_code/api/: main.py  schemas.py
twin-agent_claude_code/api/routes/: agent.py  memory.py
twin-agent_claude_code/config/: logging.py  settings.py
twin-agent_claude_code/integrations/: base.py  browser.py  gmail.py  slack.py  twitter.py
twin-agent_claude_code/llm/: client.py  prompts.py
twin-agent_claude_code/memory/: episodic.py  retriever.py  semantic.py  short_term.py
twin-agent_claude_code/scripts/: run_agent.py  seed_memory.py
twin-agent_claude_code/tests/: test_agent_loop.py  test_integrations.py  test_memory.py
(+27 files in other folders)
