[project]
name = "twin-agent"
version = "0.1.0"
description = "Autonomous AI agent — digital twin core"
requires-python = ">=3.11"

dependencies = [
    # LLM
    "litellm>=1.40.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",

    # Agent framework
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",

    # Memory
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "sentence-transformers>=3.0.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Integrations
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.130.0",
    "slack-sdk>=3.27.0",
    "tweepy>=4.14.0",
    "playwright>=1.44.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
